--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tataz-btn",
-  "version": "0.1.16",
+  "name": "jawblia-tatz",
+  "version": "0.1.4",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -8,15 +8,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
+    "ethers": "^5.6.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rmdir dist && set NODE_ENV=production& babel src/lib --out-dir dist --copy-files",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
