--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "jawblia-tatz",
-  "version": "0.1.4",
+  "name": "growpay",
+  "version": "0.0.1",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@sanity/cli": "^2.30.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "ethers": "^5.6.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.3.0",
     "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
