--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
   "name": "growpay",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts-upgradeable": "^4.7.2",
+    "@openzeppelin/hardhat-upgrades": "^1.19.1",
     "@sanity/cli": "^2.30.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bignumber.js": "^9.0.2",
     "bootstrap": "^5.2.0",
     "ethers": "^5.6.9",
+    "hardhat": "^2.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
     "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-spinners": "^0.13.4",
+    "wagmi": "^0.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,7 +55,9 @@
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
     "autoprefixer": "^10.4.7",
+    "ethereum-waffle": "^3.4.4",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
